--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,15 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&family=Nunito:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;0,600;1,400;1,500;1,600&family=Nunito:ital,wght@0,300;0,400;1,300;1,400&display=swap"
+        rel="stylesheet">
 
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
     <link rel="stylesheet" href="css/style.css">
     <title>Nexter &mdash; your home, your freedom</title>
 </head>
+
 <body>
     <main class="container">
         <!-- SIDEBAR SECTION -->
@@ -72,7 +76,8 @@
                     <use xlink:href="img/sprite.svg#icon-global"></use>
                 </svg>
                 <h4 class="heading-4 heading-4--dark">Worlds's best luxury homes</h4>
-                <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur voluptatibus.</p>
+                <p class="feature__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio
+                    necessitatibus pariatur voluptatibus.</p>
             </figure>
 
             <figure class="feature">
@@ -80,7 +85,8 @@
                     <use xlink:href="img/sprite.svg#icon-trophy"></use>
                 </svg>
                 <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
-                <p class="feature__text">Voluptatum mollitia quae. Vero ipsum sapiente molestias accusamus rerum sed a eligendi aut quia.
+                <p class="feature__text">Voluptatum mollitia quae. Vero ipsum sapiente molestias accusamus rerum sed a
+                    eligendi aut quia.
                 </p>
             </figure>
 
@@ -89,7 +95,8 @@
                     <use xlink:href="img/sprite.svg#icon-map-pin"></use>
                 </svg>
                 <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
-                <p class="feature__text">Tenetur distinctio necessitatibus pariatur voluptatibus quidem consequatur harum.</p>
+                <p class="feature__text">Tenetur distinctio necessitatibus pariatur voluptatibus quidem consequatur
+                    harum.</p>
             </figure>
 
             <figure class="feature">
@@ -97,7 +104,8 @@
                     <use xlink:href="img/sprite.svg#icon-key"></use>
                 </svg>
                 <h4 class="heading-4 heading-4--dark">New home in one week</h4>
-                <p class="feature__text">Vero ipsum sapiente molestias accusamus rerum. Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p class="feature__text">Vero ipsum sapiente molestias accusamus rerum. Lorem, ipsum dolor sit amet
+                    consectetur adipisicing elit.</p>
             </figure>
 
             <figure class="feature">
@@ -105,7 +113,8 @@
                     <use xlink:href="img/sprite.svg#icon-presentation"></use>
                 </svg>
                 <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
-                <p class="feature__text">Quidem consequatur harum, voluptatum mollitia quae. Tenetur distinctio necessitatibus pariatur voluptatibus.</p>
+                <p class="feature__text">Quidem consequatur harum, voluptatum mollitia quae. Tenetur distinctio
+                    necessitatibus pariatur voluptatibus.</p>
             </figure>
 
             <figure class="feature">
@@ -115,7 +124,7 @@
                 <h4 class="heading-4 heading-4--dark">Secure payments on nexter</h4>
                 <p class="feature__text">Pariatur voluptatibus quidem consequatur harum, voluptatum mollitia quae.</p>
             </figure>
-            
+
         </section>
 
         <!-- STORY-PICTURES SECTION -->
@@ -130,7 +139,8 @@
 
             <h2 class="heading-2 mb-md">&ldquo;The best decision of our lives&rdquo;</h2>
 
-            <p class="story__text mb-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod tenetur rem labore placeat ab voluptatibus modi deserunt facilis laborum error!</p>
+            <p class="story__text mb-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod tenetur rem
+                labore placeat ab voluptatibus modi deserunt facilis laborum error!</p>
 
             <button type="button" class="btn">Find your own home</button>
         </section>
@@ -146,29 +156,29 @@
                 <h5 class="home__name">Beautiful family house</h5>
 
                 <div class="home__location">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-                </svg>
-                <p>USA</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>USA</p>
                 </div>
 
                 <div class="home__rooms">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-profile-male"></use>
-                </svg>
-                <p>5 rooms</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+                    </svg>
+                    <p>5 rooms</p>
                 </div>
                 <div class="home__area">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-expand"></use>
-                </svg>
-                <p>325 m<sup>2</sup></p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>325 m<sup>2</sup></p>
                 </div>
                 <div class="home__price">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-key"></use>
-                </svg>
-                <p>$1,200,000</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$1,200,000</p>
                 </div>
 
                 <button type="submit" class="btn home__btn">Contact realtor</button>
@@ -182,29 +192,29 @@
                 <h5 class="home__name">Modern glass villa</h5>
 
                 <div class="home__location">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-                </svg>
-                <p>Canada</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>Canada</p>
                 </div>
 
                 <div class="home__rooms">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-profile-male"></use>
-                </svg>
-                <p>6 rooms</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+                    </svg>
+                    <p>6 rooms</p>
                 </div>
                 <div class="home__area">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-expand"></use>
-                </svg>
-                <p>450 m<sup>2</sup></p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>450 m<sup>2</sup></p>
                 </div>
                 <div class="home__price">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-key"></use>
-                </svg>
-                <p>$2,750,000</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$2,750,000</p>
                 </div>
 
                 <button type="submit" class="btn home__btn">Contact realtor</button>
@@ -218,29 +228,29 @@
                 <h5 class="home__name">Cozy country house</h5>
 
                 <div class="home__location">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-                </svg>
-                <p>UK</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>UK</p>
                 </div>
 
                 <div class="home__rooms">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-profile-male"></use>
-                </svg>
-                <p>4 rooms</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+                    </svg>
+                    <p>4 rooms</p>
                 </div>
                 <div class="home__area">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-expand"></use>
-                </svg>
-                <p>250 m<sup>2</sup></p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>250 m<sup>2</sup></p>
                 </div>
                 <div class="home__price">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-key"></use>
-                </svg>
-                <p>$850,000</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$850,000</p>
                 </div>
 
                 <button type="submit" class="btn home__btn">Contact realtor</button>
@@ -254,29 +264,29 @@
                 <h5 class="home__name">Large rustical villa</h5>
 
                 <div class="home__location">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-                </svg>
-                <p>Portugal</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>Portugal</p>
                 </div>
 
                 <div class="home__rooms">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-profile-male"></use>
-                </svg>
-                <p>6 rooms</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+                    </svg>
+                    <p>6 rooms</p>
                 </div>
                 <div class="home__area">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-expand"></use>
-                </svg>
-                <p>480 m<sup>2</sup></p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>480 m<sup>2</sup></p>
                 </div>
                 <div class="home__price">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-key"></use>
-                </svg>
-                <p>$1,950,000</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$1,950,000</p>
                 </div>
 
                 <button type="submit" class="btn home__btn">Contact realtor</button>
@@ -290,29 +300,29 @@
                 <h5 class="home__name">Majestic palace house</h5>
 
                 <div class="home__location">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-                </svg>
-                <p>Germany</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>Germany</p>
                 </div>
 
                 <div class="home__rooms">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-profile-male"></use>
-                </svg>
-                <p>18 rooms</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+                    </svg>
+                    <p>18 rooms</p>
                 </div>
                 <div class="home__area">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-expand"></use>
-                </svg>
-                <p>4230 m<sup>2</sup></p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>4230 m<sup>2</sup></p>
                 </div>
                 <div class="home__price">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-key"></use>
-                </svg>
-                <p>$9,500,000</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$9,500,000</p>
                 </div>
 
                 <button type="submit" class="btn home__btn">Contact realtor</button>
@@ -326,34 +336,34 @@
                 <h5 class="home__name">Modern family apartment</h5>
 
                 <div class="home__location">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-map-pin"></use>
-                </svg>
-                <p>Italy</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-map-pin"></use>
+                    </svg>
+                    <p>Italy</p>
                 </div>
 
                 <div class="home__rooms">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-profile-male"></use>
-                </svg>
-                <p>3 rooms</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-profile-male"></use>
+                    </svg>
+                    <p>3 rooms</p>
                 </div>
                 <div class="home__area">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-expand"></use>
-                </svg>
-                <p>180 m<sup>2</sup></p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-expand"></use>
+                    </svg>
+                    <p>180 m<sup>2</sup></p>
                 </div>
                 <div class="home__price">
-                <svg>
-                    <use xlink:href="img/sprite.svg#icon-key"></use>
-                </svg>
-                <p>$600,000</p>
+                    <svg>
+                        <use xlink:href="img/sprite.svg#icon-key"></use>
+                    </svg>
+                    <p>$600,000</p>
                 </div>
 
                 <button type="submit" class="btn home__btn">Contact realtor</button>
             </figure>
-            
+
         </section>
 
         <!-- GALLERY SECTION -->
@@ -432,4 +442,5 @@
         </footer>
     </main>
 </body>
+
 </html>
